<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/gameBackground"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top|center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:orientation="horizontal"
        >

        <RadioGroup
            android:id="@+id/playerRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/onePlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_one_button"
                />
            <RadioButton
                android:id="@+id/twoPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_two_button"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/firstPersonRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/xFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_first_button"
                />
            <RadioButton
                android:id="@+id/oFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o_first_button"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_side_text"
            android:layout_gravity="center"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_button"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apple_button"/>
        </RadioGroup>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center">
        <Button
            android:id="@+id/clearScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/clear_score_button"/>

    </LinearLayout>
</FrameLayout>
