<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gameBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top|center"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/gameText">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/games_played_text"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textColor="@color/gameText"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1_score_text"/>

            <TextView
                android:id="@+id/player1_score_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player2_score_text"/>

            <TextView
                android:id="@+id/player2_score_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="0"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/board_height"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="1"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/board_button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/board_button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/board_button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/board_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageButton
                    android:id="@+id/board_button5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageButton
                    android:id="@+id/board_button6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/board_button7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageButton
                    android:id="@+id/board_button8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageButton
                    android:id="@+id/board_button9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/reset_button"
            android:backgroundTint="@color/buttonColor"/>
    </LinearLayout>

</FrameLayout>
